
2019-06-06  Simon Sobisch <simonsobisch@gnu.org>

	* Makefile.am: adjusted dependencies for latest changes

2019-05-22  Simon Sobisch <simonsobisch@gnu.org>

	* cobcinfo.sh: completely adjusted the generation of the appendices
	  (tex-includes) to not copy the output of cobc/cobcrun verbatim
	  but to create readable tables with texinfo commands instead
	* gnucobol.texi: added intro to the appendices, heavy adjustments
	  to use of texinfo commands
	* gnucobol.texi: disabled index generation as it has not enough entries
	  to be useful
	* Makefile.am (touch, touch-tex): targets added

2019-04-28  Simon Sobisch <simonsobisch@gnu.org>

	* cobcinfo.sh: improved output for runtime configuration

2019-02-18  Simon Sobisch <simonsobisch@gnu.org>

	* Makefile.am: cleanup distribution rules

2018-08-07  Brian Tiffin <btiffin@gnu.org>

	* gnucobol.texi: CONTENTS-OF rename to CONTENT-OF

2018-06-29  Simon Sobisch <simonsobisch@gnu.org>

	* cobcinfo.sh: check that executables used actually do work
	  before using their output as content for the manual

2018-06-21  Brian Tiffin <btiffin@gnu.org>

	* gnucobol.texi: Added docs for CONTENT-LENGTH and CONTENTS-OF
	  intrinsic function extensions

2018-06-04  Simon Sobisch <simonsobisch@gnu.org>

	* cobcinfo.sh: support VPATH builds with changed sources by stripping
	  possible path from parameters

2018-04-10  Luke Smith <cobcoder@users.sourceforge.net>

	* gnucobol.texi:
	   - replace Alt-Home and Alt-End with toggle functions
	   - doc examples for SELECT ASSIGN
	   - doc more options to extended ACCEPT

2018-03-22  Simon Sobisch <simonsobisch@gnu.org>

	* gnucobol.texi: removed all node pointers but the main level as
	  makeinfo handles these correctly,
	  added a menu group for appendices (not in pdf/html)
	* gnucobol.texi: added missing subsection Figurative Constants below
	  section Extended DISPLAY statement

2018-02-16  Simon Sobisch <simonsobisch@gnu.org>
